# TBRIDGE

./: .gitignore  LICENSE  setup.cfg  setup.py
docs/: conf.py  config.rst  index.rst  simulating_galaxies.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
tbridge/: __init__.py  backgrounds.py  binning.py  config.py  data.py  densities.py  extraction.py  koe.py  masking.py  medians.py  modelling.py  process.py  profiles.py  sims.py
tbridge/plotting/: __init__.py  cutout_plots.py  single_bin_plots.py
tests/: binning tests.py
