[metadata]
name = tbridge
author = Harrison Souchereau
author_email = harrison.souchereau@yale.edu
license = BSD 3-Clause
license_file = LICENSE
url = https://github.com/HSouch/TBRIDGE
description = Testing BRIghtness Deviations in Galaxy profile Extractions
long_description = file: README.md
keywords = astronomy, astrophysics, photometry, isophote,
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
scripts=

console_scripts =
    main = tbridge:__main__
